@@ -3,13 +3,18 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
 	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>2.2.4.RELEASE</version>
+		<relativePath /> <!-- lookup parent from repository -->
+	</parent>
 	<groupId>com.nxtlife.mgs</groupId>
 	<artifactId>mgs</artifactId>
-	<version>1.0.62-SNAPSHOT</version>
-	<packaging>jar</packaging>
-	<name>My Good School App</name>
+	<version>1.0.0-SNAPSHOT</version>
+	<packaging>war</packaging>
+	<name>MyGoodSchoolApp</name>
 	<description>My Good School Rest Apis</description>
 
 	<properties>
@@ -17,21 +22,7 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
 		<failOnMissingWebXml>false</failOnMissingWebXml>
-		<executable>true</executable>
 	</properties>
-
-	<dependencyManagement>
-		<dependencies>
-			<dependency>
-				<!-- Import dependency management from Spring Boot -->
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-dependencies</artifactId>
-				<version>1.5.2.RELEASE</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
-		</dependencies>
-	</dependencyManagement>
 
 	<dependencies>
 		<dependency>
@@ -42,6 +33,10 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 
 		<dependency>
@@ -65,29 +60,17 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-tomcat</artifactId>
-			<scope>provided</scope>
-		</dependency>
-
-		<!-- jdbc token store -->
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-jdbc</artifactId>
-		</dependency>
-
 		<!-- Spring Security OAuth2 -->
 		<dependency>
-			<groupId>org.springframework.security.oauth</groupId>
-			<artifactId>spring-security-oauth2</artifactId>
+			<groupId>org.springframework.security.oauth.boot</groupId>
+			<artifactId>spring-security-oauth2-autoconfigure</artifactId>
+			<version>2.1.0.RELEASE</version>
 		</dependency>
 
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<version>8.0.18</version><!-- $NO-MVN-MAN-VER$ -->
-			
+			<scope>runtime</scope>
 		</dependency>
 
 		<dependency>
@@ -100,26 +83,6 @@
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-io</artifactId>
 			<version>1.3.2</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.integration</groupId>
-			<artifactId>spring-integration-ftp</artifactId>
-			<scope>compile</scope>
-			<exclusions>
-				<exclusion>
-					<artifactId>jackson-module-kotlin</artifactId>
-					<groupId>com.fasterxml.jackson.module</groupId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/org.apache.ftpserver/ftpserver-core -->
-		<dependency>
-			<groupId>org.apache.ftpserver</groupId>
-			<artifactId>ftpserver-core</artifactId>
-			<version>1.1.1</version>
-			<scope>compile</scope>
 		</dependency>
 
 		<!-- pdf dependency -->
@@ -156,7 +119,6 @@
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
-			<version>3.5</version>
 		</dependency>
 
 		<!-- Websocket -->
@@ -165,11 +127,6 @@
 			<artifactId>spring-boot-starter-websocket</artifactId>
 		</dependency>
 
-		<dependency>
-			<groupId>com.github.ulisesbocchio</groupId>
-			<artifactId>jasypt-spring-boot-starter</artifactId>
-			<version>1.16</version>
-		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/com.google.api-client/google-api-client -->
 		<dependency>
@@ -223,89 +180,19 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-				<version>1.5.2.RELEASE</version>
 				<configuration>
 					<executable>true</executable>
 				</configuration>
-
-				<executions>
-					<execution>
-						<goals>
-							<goal>repackage</goal>
-						</goals>
-					</execution>
-				</executions>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.1</version>
 				<configuration>
 					<executable>true</executable>
 					<source>1.8</source>
 					<target>1.8</target>
 				</configuration>
 			</plugin>
-
-			<plugin>
-				<groupId>com.akathist.maven.plugins.launch4j</groupId>
-				<artifactId>launch4j-maven-plugin</artifactId>
-				<version>1.7.16</version>
-				<executions>
-					<execution>
-						<id>l4j-clui</id>
-						<phase>package</phase>
-						<goals>
-							<goal>launch4j</goal>
-						</goals>
-						<configuration>
-							<headerType>console</headerType>
-							<outfile>target/MGSBackendRelease_1.4.exe</outfile>
-							<jar>${project.build.directory}/${project.artifactId}-${project.version}.jar</jar>
-							<errTitle>Error in running mgs project</errTitle>
-							<stayAlive>true</stayAlive>
-							<restartOnCrash>true</restartOnCrash>
-							<classPath>
-								<mainClass>org.springframework.boot.loader.JarLauncher</mainClass>
-								<!--Not sure what the next 2 lines are for -->
-								<addDependencies>true</addDependencies>
-								<preCp>anything</preCp>
-							</classPath>
-
-							<jre>
-								<minVersion>1.8.0_161</minVersion>
-								<!--Not sure what these opts are for -->
-								<opts>
-									<opt>-Djava.endorsed.dirs=./endorsed</opt>
-								</opts>
-							</jre>
-
-							<versionInfo>
-								<fileVersion>0.0.2.1</fileVersion>
-								<txtFileVersion>0.0.2.1</txtFileVersion>
-								<fileDescription>${project.name}</fileDescription>
-								<copyright>Efkon India</copyright>
-								<productVersion>0.0.1.0</productVersion>
-								<txtProductVersion>${project.version}</txtProductVersion>
-								<productName>${project.name}</productName>
-								<originalFilename>MGSBackendRelease_1.3.exe</originalFilename>
-								<!-- internalName is mandatory -->
-								<internalName>nxtlife-mgs</internalName>
-							</versionInfo>
-
-							<messages>
-								<startupErr>Couldn't start the server</startupErr>
-								<bundledJreErr>JRE Bundled error</bundledJreErr>
-								<jreVersionErr>JRE version is different</jreVersionErr>
-								<launcherErr>Couldn't launch</launcherErr>
-								<!-- Used by console header only. -->
-								<instanceAlreadyExistsMsg>Instance already running</instanceAlreadyExistsMsg>
-							</messages>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-
 
 			<plugin>
 				<groupId>com.mysema.maven</groupId>
